<resources>
    <string name="app_name">Notes</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="search">Search</string>
    <string name="delete">Delete</string>
    <string name="save">Save</string>
    <string name="title">Title</string>
    <string name="desc">Description</string>
    <string name="enter_title">Please, enter title</string>
    <string name="change_color">Change color</string>
    <string name="choose_color">Please, choose a color</string>
    <string name="grey_color">Gray</string>
    <string name="red_color">Red</string>
    <string name="green_color">Green</string>
    <string name="orange_color">Orange</string>
    <string name="blue_color">Blue</string>
    <string name="ok">Ok</string>
    <string name="cancel">Cancel</string>
    <string name="filter">Filter</string>
    <string name="all_notes">All notes</string>
    <string name="not_found_filter">Not found with this filter</string>
    <string name="sure_del_note">Are you sure you want to delete it?</string>
</resources>